# ThumbnailMe4

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_M3_working.txt  CREDITS.md  DockThreadsPool.h  LICENSE  NOTICE.md  README.md  main_qt6_shell.cpp  main_qt6_shell_M3_working.cpp
dist_files/: README_LINUX.txt  README_WINDOWS_ZIP.txt  RELEASE_NOTES_4B2_DRAFT.md  RELEASE_NOTES_BETA3.md  ThumbnailMe4.sh  settings.ini.example
dist_files/licenses/: BSD-3-Clause.txt  README_LICENSES.txt  THIRD_PARTY_NOTICES.txt
dist_files/licenses/FFmpeg/: README_FFMPEG.txt
dist_files/licenses/MediaInfo/: README_MEDIAINFO.txt
dist_files/licenses/Qt/: README_QT.txt
dist_files/licenses/Source/: README_SOURCE_OFFER.txt
dist_files/licenses/ThumbnailMe4/: README_THUMBNAILME4.txt
dist_files/licenses/WebP/: README_WEBP.txt
dist_files/linux/: AppRun  install_desktop_entry.sh  thumbnailme4.desktop  uninstall_desktop_entry.sh
src/: ContactSheetComposer.cpp  ContactSheetComposer.h  FrameGrabber.cpp  FrameGrabber.h  MainWindow.cpp  MainWindow.h  MediaInfoReader.cpp  MediaInfoReader.h  VideoProbe.cpp  VideoProbe.h  VideoTypes.h  WorkerMain.cpp  app_icon.rc  app_resources.qrc  main.cpp
thumbnailme_3.0_Windows_Sources/: About.cpp  About.h  ConfigWidget.cpp  ConfigWidget.h  DockConf.h  DockInputOutput.h  DockStyles.h  DockTimeLine.cpp  DockTimeLine.h  FontMapComboBox.cpp  FontMapComboBox.h  FontsSettingsTab.cpp  FontsSettingsTab.h  GeneralSettingsTab.cpp  GeneralSettingsTab.h  HelpBrowser.cpp  HelpBrowser.h  HelpWidget.cpp  HelpWidget.h  ImageShackLoginWidget.cpp  ImageShackLoginWidget.h  ImageShackUploadWidget.ui  IniManager.cpp  IniManager.h  LanguagesSettingsTab.cpp  LanguagesSettingsTab.h  MainWindow.cpp  MainWindow.h  NetworkSettingsTab.cpp  NetworkSettingsTab.h  PreviewGraphicView.cpp  PreviewGraphicView.h  ProcessingStatusBar.cpp  ProcessingStatusBar.h  SuccessDialog.h  ThumbnailEngine.cpp  ThumbnailEngine.h  ThumbnailItem.cpp  ThumbnailItem.h  ThumbnailListwidget.cpp  (+5 more)
thumbnailme_3.0_Windows_Sources/doc/: _about_8cpp__incl.map  _about_8h__dep__incl.map  _config_widget_8cpp__incl.map  _config_widget_8h__dep__incl.map  _dock_conf_8cpp__incl.map  _dock_conf_8h__dep__incl.map  _dock_conf_8h__incl.map  _dock_input_output_8cpp__incl.map  _dock_input_output_8h__dep__incl.map  _dock_input_output_8h__incl.map  _dock_styles_8cpp__incl.map  _dock_styles_8h__dep__incl.map  _dock_styles_8h__incl.map  _dock_time_line_8cpp__incl.map  _fen_principale_8cpp__incl.map  _fen_principale_8h__dep__incl.map  _fen_principale_8h__incl.map  _font_map_combo_box_8cpp__incl.map  _font_map_combo_box_8h__dep__incl.map  _fonts_settings_tab_8cpp__incl.map  _fonts_settings_tab_8h__dep__incl.map  _fonts_settings_tab_8h__incl.map  _general_settings_tab_8cpp__incl.map  _general_settings_tab_8h__dep__incl.map  _general_settings_tab_8h__incl.map  _help_browser_8cpp__incl.map  _help_browser_8h__dep__incl.map  _help_widget_8cpp__incl.map  _image_shack_login_widget_8cpp__incl.map  _image_shack_login_widget_8h__dep__incl.map  _image_shack_login_widget_8h__incl.map  _image_shack_result_widget_8cpp__incl.map  _image_shack_result_widget_8h__dep__incl.map  _image_shack_upload_widget_8cpp__incl.map  _image_shack_upload_widget_8h__dep__incl.map  _image_shack_upload_widget_8h__incl.map  _ini_manager_8cpp__incl.map  _ini_manager_8h__dep__incl.map  _ini_manager_8h__incl.map  _languages_settings_tab_8cpp__incl.map  (+71 more)
thumbnailme_3.0_Windows_Sources/lib/libQt+/: libQt+.pro
thumbnailme_3.0_Windows_Sources/lib/libQt+/doc/html/search/: searc.txt
thumbnailme_3.0_Windows_Sources/lib/libQt+/src/: libQt+.cpp  libQt+.h
thumbnailme_3.0_Windows_Sources/readme/: README.txt
tools/: 4B2P_SYNC_NOTES.md  4B2Q_FIX_NOTES.md  BETA2_PREP_CHECKLIST.md  README_APPIMAGE.md  README_FFMPEG_MTN_STYLE.md  audit_translations.py  audit_windows_dependencies.bat  audit_windows_package_size.bat  audit_windows_package_size.ps1  build_appimage.sh  build_ffmpeg_mtn_style_runtime.bat  check_ffmpeg_runtime_root.bat  check_windows_zip_release.bat  copy_ffmpeg_runtime_deps.ps1  copy_linux_runtime_deps.sh  copy_msvc_runtime_deps.ps1  copy_msvc_runtime_deps_4b2q.ps1  download_appimage_tools.sh  ffmpeg_mtn_style_configure.sh  make_linux_tarball.sh  make_source_package.bat  make_source_package.ps1  make_windows_zip_release.bat
